Changing makeIndex script and adding more module formats

--- a/util/check-umd.html
+++ b/util/check-umd.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <p>Check the console to view the helloRollup Message.</p>
-	<script type="text/javascript" src="../dist/helloRollup.min.js"></script>
+	<script type="text/javascript" src="../dist/helloRollup.umd.min.js"></script>
     <script>
-			window.helloRollup.hello("UMD")
+			window.helloRollup.$hello("UMD")
             helloRollup.$hello("again")
-            var hello = helloRollup.hello
+            var hello = helloRollup.$hello
             hello("everybody")
     </script>
 </body>
