Adding esm module support to package.json

--- a/util/check-esm.html
+++ b/util/check-esm.html
@@ -12,7 +12,7 @@
 <body>
     <p>Check the console to view the helloRollup Message.</p>
     <script type="module">
-            import { $hello } from "https://cdn.jsdelivr.net/npm/@marhc/hellorollup/dist/helloRollup.mjs"
+            import { $hello } from "https://cdn.jsdelivr.net/npm/@marhc/hellorollup/dist/helloRollup.min.mjs"
 			$hello("ESM")
             var helloRollup = {hello: $hello}
             helloRollup.hello("again")
